fix: align profile

--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ h1 {
   position: relative;
   overflow: hidden;
   border-radius: 50%;
-  left: -1.5rem;
+  top: 2rem;
 }
 
 #profile {
